implement selected/unselected initial render

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<div id="map"></div>
+<div style="display: flex; justify-content: center">
+  <div id="map" style="width: 50%"></div>
+</div>
 <script src="https://mappingservices.unl.edu/libs/mappingServices/1.3/neMap.js"></script>
 <script src="map.js"></script>
 
@@ -10,47 +12,10 @@
   size="9"
   class="form-select"
 >
-  <option value="281">Adams</option>
-  <option value="284">Antelope</option>
-  <option value="287">Box Butte</option>
-  <option value="290">Boyd</option>
-  <option value="293">Brown</option>
-  <option value="296">Brown, KS</option>
+  <!-- <option value="759" selected="selected">Adams</option> -->
+  <option value="759">Adams</option>
   <option value="11">Buffalo</option>
-  <option value="299">Burt</option>
-  <option value="302">Butler</option>
-  <option value="305">Cass</option>
-  <option value="308">Cedar</option>
-  <option value="311">Chase</option>
-  <option value="314">Cherry</option>
-  <option value="317">Clay</option>
-  <option value="320">Colfax</option>
-  <option value="323">Cuming</option>
-  <option value="326">Custer</option>
-  <option value="329">Dawson</option>
-  <option value="332">Dodge</option>
-  <option value="335">Douglas</option>
-  <option value="338">Dundy</option>
-  <option value="341">Fillmore</option>
-  <option value="347">Franklin</option>
-  <option value="353">Gage</option>
-  <option value="356">Gosper</option>
-  <option value="359">Greeley</option>
-  <option value="362">Hall</option>
-  <option value="368">Hamilton</option>
-  <option value="374">Hayes</option>
-  <option value="380">Hitchcock</option>
-  <option value="386">Holt</option>
-  <option value="389">Howard</option>
-  <option value="392">Jefferson</option>
-  <option value="398">Kearney</option>
-  <option value="401">Keith</option>
-  <option value="404">Knox</option>
   <option value="407">Lancaster</option>
-  <option value="410">Lincoln</option>
-  <option value="413">Logan</option>
-  <option value="416">Madison</option>
-  <option value="419">Merrick</option>
   <option value="422">Morrill</option>
   <option value="425">Nance</option>
   <option value="428">Nemaha</option>
